--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="./David-pic-small.jpeg" 
+            <td><img src="David-pic-small.jpeg" 
                 alt="Picture of David"></td>
             <td><h1>David Oliver</h1>
                 <p><em>Web Programer working on his <strong>AWS Certified Solutions Architect Associate</strong> certification.</em></p>
